# uart

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  LICENSE  README.md  README_DOCS.md  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  sitemap.xml  uart_report.xlsx  vhdl_ls.toml
.github/: dependabot.yml
.github/actions/setup-environment/: action.yml
.github/actions/simulation/: action.yaml
.github/workflows/: apt-dependencies.txt  hdl-check.yml  mkdocs-deploy.yml  py-check.yml  simulations.yml
assets/: uart.drawio
assets/javascripts/: onload-events.js
assets/stylesheets/: style.css
bench/: setup_vunit.py  utils.py
bench/models/: uart_model.vhd
bench/models/pll/: pll_fast_sim.vhd
bench/models/spi/: spi_master_model.vhd  spi_pkg.vhd  spi_slave_model.vhd
bench/models/uart/: uart_model.vhd
bench/regblock/: coverage.spec  run.py
bench/regblock/test/: tb_regblock.vhd  tb_regblock_pkg.vhd
bench/results/: coverage.ncdb  coverage_data.ncdb  output.txt
bench/spi/: coverage.spec  run.py
bench/spi/test/: tb_spi.vhd  tb_spi_master.vhd  tb_spi_master_pkg.vhd  tb_spi_pkg.vhd
bench/top_fpga/: coverage.spec  run.py
bench/top_fpga/results/: coverage_data.ncdb  output.txt
bench/top_fpga/test/: tb_top_fpga.vhd  tb_top_fpga_pck.vhd  top_fpga.vhd
bench/uart/: coverage.spec  run.py
bench/uart/test/: tb_uart.vhd  tb_uart_pkg.vhd  tb_uart_rx.vhd  tb_uart_tx.vhd
cores/pll/: clk_wiz_0.xci  clk_wiz_0_sim_netlist.vhd  clk_wiz_0_stub.vhd  pll.vhd  pll_sim.vhd
docs/: Makefile  bench.md  index.md  requirements.txt  uart_report.xlsx  usage.md
docs/assets/: uart.drawio
docs/assets/javascripts/: onload-events.js
docs/assets/stylesheets/: extras.css  style.css
docs/modules/: regfile.md  resync_slv.md  spi_master.md  tb_top_fpga.md  top_fpga.md  uart.md  uart_rx.md  uart_tx.md
docs/modules/regblock/: regblock.md
docs/modules/regfile/: regfile.md
docs/modules/resync_slv/: resync_slv.md
docs/modules/spi/: spi_master.md
docs/modules/testbench/: tb_top_fpga.md  testcases.md
docs/modules/uart/: uart.md  uart_axi_lite_bridge.md  uart_rx.md  uart_tx.md
docs/modules/vga/: vga_controller.md
docs/source/: bench.rst  conf.py  index.rst  uart.drawio
docs/source/_static/html/: clock_configuration.html
docs/source/modules/: regfile.rst  resync_slv.rst  spi_master.rst  top_fpga.rst  uart.rst  uart_rx.rst  uart_tx.rst
lint/config/: .markdownlint.yaml  .vsg.yaml
lint/script/: lint.py
modules/regblock/regblock/: index.html
modules/regfile/regfile/: index.html
modules/spi/spi_master/: index.html
modules/testbench/tb_top_fpga/: index.html
modules/testbench/testcases/: index.html
modules/top_fpga/: index.html
modules/uart/uart/: index.html
modules/uart/uart_axi_lite_bridge/: index.html
modules/uart/uart_rx/: index.html
modules/uart/uart_tx/: index.html
modules/vga/vga_controller/: index.html
search/: search_index.json
site/: 404.html  index.html
site/bench/: index.html
site/modules/regfile/: index.html
site/modules/resync_slv/: index.html
site/modules/spi_master/: index.html
site/modules/top_fpga/: index.html
site/modules/uart/: index.html
site/modules/uart_rx/: index.html
site/modules/uart_tx/: index.html
site/search/: search_index.json
site/source/modules/: resync_slv.rst  spi_master.rst  uart_rx.rst
sources/regblock/: regblock.vhd  regblock_pkg.vhd
sources/regfile/: regfile.vhd  regfile_pkg.vhd
sources/regfile/rtl/: regfile.vhd  regfile_pkg.vhd
sources/resync/: resync_slv.vhd
sources/resync/rtl/: resync_slv.vhd
sources/spi/: spi_master.vhd
sources/top_fpga/: top_fpga.vhd
sources/top_fpga/rtl/: top_fpga.vhd
sources/uart/: uart.vhd  uart_axi_lite_bridge.vhd  uart_rx.vhd  uart_tx.vhd
sources/uart/rtl/: uart.vhd  uart_rx.vhd  uart_tx.vhd
sources/vga/: vga_controller.vhd
synthesis/: run_synthesis.tcl
synthesis/bench/results/: coverage.ncdb  output.txt
synthesis/constraints/: pinout.xdc  timing.xdc
synthesis/results/impl/: uart_bus_skew.rpt  uart_clock_utilization.rpt  uart_control_sets.rpt  uart_drc.rpt  uart_io.rpt  uart_power.rpt  uart_route_status.rpt  uart_timing.rpt  uart_utilization_hierarchical_place.rpt  uart_utilization_place.rpt
synthesis/results/synth/: uart_bus_skew_synth.rpt  uart_timing_synth.rpt  uart_utilization_hierarchical_synth.rpt  uart_utilization_synth.rpt
tools/markdownlint-cli2/config/: .markdownlint.yaml
tools/peakrdl/config/: regblock.hjson  regblock.rdl
tools/peakrdl/script/: generate_regblock.py
tools/vsg/: .vsg.yaml
tools/vsg/config/: .markdownlint.yaml  .vsg.yaml
tools/vsg/script/: lint.py
usage/: index.html
