[project]
name = "uart"

authors = [{ name = "Timothée Charrier" }]
maintainers = [{ name = "Timothée Charrier" }]

dependencies = [
    "rtoml",
    "vunit-hdl @ git+https://github.com/VUnit/vunit.git@master",
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
version = "1.0"

## =====================================================================================================================
# Note on `uv` version:
#   UV version >= 0.11.15
#   Without a higher or equal version, you may encounter an error with `VUnit`.
#   See [this issue](https://github.com/astral-sh/uv/issues/9822) for more details.
## =====================================================================================================================

[tool.uv]
required-version = ">=0.11.15"

## =====================================================================================================================
# Dependency groups
## =====================================================================================================================

[dependency-groups]

dev = [
    "docstrfmt",
    "peakrdl-markdown",
    "peakrdl-regblock-vhdl",
    "peakrdl",
    "pre-commit",
    "pytest",
    "ruff",
    "vsg",
]

docs = ["mkdocs", "mkdocs-drawio", "mkdocs-material", "pymdown-extensions"]

## =====================================================================================================================
# Ruff configuration
## =====================================================================================================================

[tool.ruff]
exclude = [
    "__pypackages__",
    "_build",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git-rewrite",
    ".git",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "oss-cad-suite",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = [
    'D',       # pydocstyle
    "I",       # isort
    "UP",      # pyupgrade
    "PL",      # pylint
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "C4",      # flake8-comprehension
    "LOG",     # flake8-logging
    "G",       # flake8-logging-format
    "ISC",     # implicit string concat
    "TC",      # flake8-typechecking
    "SIM103",  # return the condition directly
    "SIM300",  # yoda conditions
    "RUF100",  # unused noqa
    "RUF101",  # redirected noqa
    "RUF010",  # explicit type conversion in f-string
    "RUF005",  # collection literal concatenation
    "RUF022",  # unsorted __all__
    "PERF101", # unnecessary list cast
    "PERF102", # unnecessary dict.items()
    "B007",    # unused loop variable
    "PYI030",  # unnecessary literal union
]
ignore = [
    "E741",    # ambiguous variable name (preference)
    "E501",    # line too long (preference)
    "PLR0912", # Too many branches (>12) (preference)
    "PLR0913", # Too many arguments to function call (>5) (preference)
    "PLR0915", # Too many statements (>50) (preference)
    "PLR2004", # Magic value used in comparison (preference)
    "PLW0603", # Using the global statement (preference)
    "PLR0911", # Too many return statements (preference)
    "PLW1641", # __eq__ without __hash__ (mypy compatibility)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

## =====================================================================================================================
# Workaround for `error: Multiple top-level packages discovered in a flat-layout:`
# See https://stackoverflow.com/questions/72294299/multiple-top-level-packages-discovered-in-a-flat-layout
## =====================================================================================================================

[tool.setuptools]
py-modules = []
